JSAI/error/src/test/resources/scoping/v317.js

function foo(self, args) {
	return self + args; 
}

var x = foo(1, 2);
print(x);